--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
 	<color name="light_gray">#D3D3D3</color>
     <color name="light_blue">#24a0ed</color>
+    <color name="black">#000000</color>
 </resources>
