--- a/app/src/main/res/layout/activity_java_syntax.xml
+++ b/app/src/main/res/layout/activity_java_syntax.xml
@@ -140,7 +140,7 @@
             app:srcCompat="@drawable/codey_java_dyk" />
 
         <Button
-            android:id="@+id/btdyk1"
+            android:id="@+id/python_introduction_DYK1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="64dp"
