--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
 	<color name="light_gray">#D3D3D3</color>
     <color name="light_blue">#24a0ed</color>
     <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+
 </resources>
