--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,8 @@
     <!-- TextFontFamily. -->
     <style name="lionelTextView" parent="android:Widget.TextView">
         <item name="android:fontFamily">@font/font</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16dp</item>
     </style>
 
     <style name="lionelButton" parent="android:Widget.Button">
